--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,13 @@
         "symfony/console": "^5.2",
         "kherge/file-manager": "^2.7",
         "symfony/http-foundation": "^5.2",
-        "vlucas/spot2": "^2.2"
+        "vlucas/spot2": "^2.2",
+        "digitalnature/php-ref": "^1.3",
+        "minime/annotations": "^3.1",
+        "twig/twig": "^3.0",
+        "jan-swiecki/simple-annotations": "^0.3.1",
+        "doctrine/annotations": "^1.11",
+        "haydenpierce/class-finder": "^0.4.2"
     },
     "autoload": {
         "psr-4": {
