Edit console + composerJson for unix case sentitive matching + finish creating user with our new system + FormBuilder didn't  display value if mapped = false

--- a/composer.json
+++ b/composer.json
@@ -28,8 +28,8 @@
             "App\\Config\\" : "config/",
             "App\\": "core/",
             "Entity\\": "entity/",
-            "Form\\": "form/"
+            "Form\\": "Form/"
         },
-        "classmap": ["bin/src", "model/", "controller/", "helper/", "config/", "core/", "entity/", "form/"]
+        "classmap": ["bin/src", "model/", "controller/", "helper/", "config/", "core/", "entity/", "Form/"]
     }
 }
