--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "jan-swiecki/simple-annotations": "^0.3.1",
         "doctrine/annotations": "^1.11",
         "haydenpierce/class-finder": "^0.4.2",
-        "maximebf/debugbar": "^1.16"
+        "maximebf/debugbar": "^1.16",
+        "automattic/woocommerce": "^3.0"
     },
     "autoload": {
         "psr-4": {
